--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
 @import url(/css/core.css);
 @import url(/css/blocks/header.css);
 @import url(/css/blocks/button.css);
+@import url(/css/blocks/about-us.css);
