--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,4 @@
 @import url(/css/blocks/header.css);
 @import url(/css/blocks/button.css);
 @import url(/css/blocks/about-us.css);
+@import url(/css/blocks/icons.css);
